LEGEND
------
  [!] New plugin
  [+] New feature
  [*] Enhancement
  [-] Bug fix


v1.0.2
------
  [+] Added ability to store additional resources in the application data folder
  [+] Added status iconset for "vKontakte" users
  [+] Send button is added to the messages standard input field
  [+] Added support for query of service uptime and idle time of contact
  [+] Added support for sending a file by dragging it in the chat window
  [*] In the case when failed to identify a registered conference nick, by default invited to use the nickname from the vCard
  [*] Button "Exit room" moved from the tools menu directly on the toolbar
  [*] Saving the directory of the last selected file in the file transfer dialog
  [-] Unable to login to some servers in some cases
  [-] Offline messages may not be saved in the local message archive
  [-] History continues to load from a local file after switching to a server archive
  [-] When the replication of server archive is enabled than the ongoing chat could not completely copied to a local disk
  [-] The main status could be displayed as "offline" even when one of the accounts is connected
  [-] The socks5-proxy on native server has not been automatically added to available proxy list
  [-] Triggering of avtostatus rule could lead to connect of offline accounts
  [-] It is not been possible to establish a direct connection for file transfer, if the default proxy has been set
  [-] Some settings can not be saved in case of turning off the computer without exit the application


v1.0.1
------
  [+] Added a notification when referring to you in the conference
  [+] Added option to automatically activate the notification
  [+] Added possibility to open all active conference
  [+] Added possibility to insert a nick on middle mouse click on the conference user 
  [+] Added Polish localization (thanks les.kamil)
  [+] Added the ability to quickly add a user through the gateways in the account context menu